add new website from server na

--- a/xem-phim-bo/tang-hai-hoa/index.html
+++ b/xem-phim-bo/tang-hai-hoa/index.html
@@ -1196,7 +1196,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             46
+             47
             </dd>
             <br/>
            </dl>
@@ -1754,18 +1754,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ty-muoi-than-dung" title="Tỷ muội thần dũng">
+          <a class="list-top-movie-link" href="/phim-moi/dao-ai-tinh" title="Đảo Ái Tình">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ty-muoi-than-dung-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dao-ai-tinh-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Tỷ muội thần dũng
+             Đảo Ái Tình
             </span>
             <span class="list-top-movie-item-en">
-             Doubles Cause Troubles
+             Island of Desire
             </span>
             <span class="list-top-movie-item-view">
              4 lượt xem
@@ -1776,40 +1776,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/gia-dinh-chan-to-phieu-luu-ky" title="Gia Đình Chân to Phiêu Lưu Ký">
+          <a class="list-top-movie-link" href="/phim-moi/the-forever-purge-5" title="The Forever Purge 5">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/gia-dinh-chan-to-phieu-luu-ky-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/the-forever-purge-5-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Gia Đình Chân to Phiêu Lưu Ký
+             The Forever Purge 5
             </span>
             <span class="list-top-movie-item-en">
-             Bigfoot Family
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/song-than" title="Sóng Thần">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/song-than-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Sóng Thần
-            </span>
-            <span class="list-top-movie-item-en">
-             The Wave
+             The Forever Purge 5
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1820,18 +1798,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/the-quiet-duel" title="The Quiet Duel">
+          <a class="list-top-movie-link" href="/phim-moi/nu-phap-y-pha-an" title="Nữ Pháp Y Phá Án">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/the-quiet-duel-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nu-phap-y-pha-an-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             The Quiet Duel
+             Nữ Pháp Y Phá Án
             </span>
             <span class="list-top-movie-item-en">
-             The Quiet Duel
+             Miss Truth
+            </span>
+            <span class="list-top-movie-item-view">
+             0 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/chia-khoa-van-nang" title="Chìa khóa vạn năng">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chia-khoa-van-nang-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Chìa khóa vạn năng
+            </span>
+            <span class="list-top-movie-item-en">
+             The Skeleton Key
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1842,21 +1842,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/doi-truong-quan-lot-phim-dien-anh-hoanh-trang-dau-tien" title="Đội trưởng quần lót: Phim điện ảnh hoành tráng đầu tiên">
+          <a class="list-top-movie-link" href="/phim-moi/nguoi-doi-ninja" title="Người Dơi Ninja">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/doi-truong-quan-lot-phim-dien-anh-hoanh-trang-dau-tien-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nguoi-doi-ninja-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Đội trưởng quần lót: Phim điện ảnh hoành tráng đầu tiên
+             Người Dơi Ninja
             </span>
             <span class="list-top-movie-item-en">
-             Captain Underpants: The First Epic Movie
+             Batman Ninja
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             1 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
