add new website from server na

--- a/xem-phim-bo/tu-phuong-quan/index.html
+++ b/xem-phim-bo/tu-phuong-quan/index.html
@@ -1190,7 +1190,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             2
+             3
             </dd>
             <br/>
            </dl>
@@ -1660,18 +1660,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/linh-ban-tia-qua-trang" title="Lính Bắn Tỉa: Quạ Trắng">
+          <a class="list-top-movie-link" href="/phim-moi/1911" title="1911">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/linh-ban-tia-qua-trang-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/1911-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Lính Bắn Tỉa: Quạ Trắng
+             1911
             </span>
             <span class="list-top-movie-item-en">
-             Sniper. The White Raven
+             1911
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1682,18 +1682,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nhac-truong-tar" title="Nhạc Trưởng Tár">
+          <a class="list-top-movie-link" href="/phim-moi/nam-thanh-di-han" title="Nam Thành Di Hận">
            <span class="status">
-            HD Vietsub
+            HD Thuyết Minh
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nhac-truong-tar-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nam-thanh-di-han-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Nhạc Trưởng Tár
+             Nam Thành Di Hận
             </span>
             <span class="list-top-movie-item-en">
-             Tar
+             South City Resentment
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1704,40 +1704,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/anh-hung-chien-dau" title="Anh hùng chiến đấu">
+          <a class="list-top-movie-link" href="/phim-moi/mortal-kombat-legends-battle-of-the-realms" title="Mortal Kombat Legends: Battle of the Realms">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/anh-hung-chien-dau-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/mortal-kombat-legends-battle-of-the-realms-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Anh hùng chiến đấu
+             Mortal Kombat Legends: Battle of the Realms
             </span>
             <span class="list-top-movie-item-en">
-             Fighter Hero
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/thu-pham-bong-ma" title="Thủ phạm bóng ma">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thu-pham-bong-ma-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Thủ phạm bóng ma
-            </span>
-            <span class="list-top-movie-item-en">
-             The Phantom
+             Mortal Kombat Legends: Battle of the Realms
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1748,21 +1726,43 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/human-planet" title="Human Planet">
+          <a class="list-top-movie-link" href="/phim-moi/ba-chang-ngu-lam" title="Ba Chàng Ngự Lâm">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/human-planet-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ba-chang-ngu-lam-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Human Planet
+             Ba Chàng Ngự Lâm
             </span>
             <span class="list-top-movie-item-en">
-             Human Planet
+             The Hangover
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/su-menh-tinh-yeu" title="Sứ mệnh tình yêu">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/su-menh-tinh-yeu-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Sứ mệnh tình yêu
+            </span>
+            <span class="list-top-movie-item-en">
+             Love Mission
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
