add new website from server na

--- a/xem-phim-bo/lieu-chu-ky/index.html
+++ b/xem-phim-bo/lieu-chu-ky/index.html
@@ -1187,7 +1187,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             4
+             5
             </dd>
             <br/>
            </dl>
@@ -1657,84 +1657,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/san-dung-nham-phan-1" title="Sàn dung nham (Phần 1)">
+          <a class="list-top-movie-link" href="/phim-moi/sieu-nhien-phan-8" title="Siêu Nhiên (Phần 8)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/san-dung-nham-phan-1-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/sieu-nhien-phan-8-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Sàn dung nham (Phần 1)
+             Siêu Nhiên (Phần 8)
             </span>
             <span class="list-top-movie-item-en">
-             Floor Is Lava (Season 1)
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ngoa-ho-tang-long" title="Ngọa Hổ Tàng Long">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ngoa-ho-tang-long-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Ngọa Hổ Tàng Long
-            </span>
-            <span class="list-top-movie-item-en">
-             Crouching Tiger, Hidden Dragon
-            </span>
-            <span class="list-top-movie-item-view">
-             5 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/chua-te-cua-nhung-chiec-nhan-nhung-chiec-nhan-quyen-nang" title="Chúa Tể Của Những Chiếc Nhẫn: Những Chiếc Nhẫn Quyền Năng">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chua-te-cua-nhung-chiec-nhan-nhung-chiec-nhan-quyen-nang-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Chúa Tể Của Những Chiếc Nhẫn: Những Chiếc Nhẫn Quyền Năng
-            </span>
-            <span class="list-top-movie-item-en">
-             The Lord of the Rings: The Rings of Power
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nang-tien-ca-2" title="Nàng Tiên Cá">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nang-tien-ca-2023-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Nàng Tiên Cá
-            </span>
-            <span class="list-top-movie-item-en">
-             The Little Mermaid
+             Supernatural (Season 8)
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1745,18 +1679,84 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/gia-dinh-sieu-nhan" title="Gia Đình Siêu Nhân">
+          <a class="list-top-movie-link" href="/phim-moi/the-gioi-hoan-hao" title="Thế giới hoàn hảo">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/gia-dinh-sieu-nhan-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/the-gioi-hoan-hao-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Gia Đình Siêu Nhân
+             Thế giới hoàn hảo
             </span>
             <span class="list-top-movie-item-en">
-             The Incredibles
+             Perfect World
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/hoi-tuong-melbourne" title="Hồi tưởng Melbourne">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hoi-tuong-melbourne-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Hồi tưởng Melbourne
+            </span>
+            <span class="list-top-movie-item-en">
+             Melbourne Rewind
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/chuyen-co-hang-xom" title="Chuyện Cô Hàng Xóm">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chuyen-co-hang-xom-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Chuyện Cô Hàng Xóm
+            </span>
+            <span class="list-top-movie-item-en">
+             A Short Film About Love
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/lang-khach-kenshin-kinh-do-moi" title="Lãng khách Kenshin: Kinh đô mới">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/lang-khach-kenshin-kinh-do-moi-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Lãng khách Kenshin: Kinh đô mới
+            </span>
+            <span class="list-top-movie-item-en">
+             るろうに剣心 -明治剣客浪漫譚- 新京都編
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
