add new website from server na

--- a/xem-phim-bo/vinh-da-truong-minh/index.html
+++ b/xem-phim-bo/vinh-da-truong-minh/index.html
@@ -1187,7 +1187,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             3
+             4
             </dd>
             <br/>
            </dl>
@@ -1690,18 +1690,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/mao-son" title="Mao Sơn">
+          <a class="list-top-movie-link" href="/phim-moi/stillwater" title="Stillwater">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/mao-son-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/stillwater-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Mao Sơn
+             Stillwater
             </span>
             <span class="list-top-movie-item-en">
-             Maoshan
+             Stillwater
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/dau-gau-truong-hoc" title="Đầu Gấu Trường Học">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dau-gau-truong-hoc-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Đầu Gấu Trường Học
+            </span>
+            <span class="list-top-movie-item-en">
+             Kenka Banchou Otome: Girl Beats Boys
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1712,18 +1734,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/shake-rattle-roll-extreme" title="Shake, Rattle &amp; Roll Extreme">
+          <a class="list-top-movie-link" href="/phim-moi/gia-dinh" title="Gia Đình">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/shake-rattle-and-roll-extreme-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/gia-dinh-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Shake, Rattle &amp; Roll Extreme
+             Gia Đình
             </span>
             <span class="list-top-movie-item-en">
-             Shake, Rattle &amp; Roll Extreme
+             Aile
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1734,21 +1756,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ke-phan-quoc" title="Kẻ phản quốc">
+          <a class="list-top-movie-link" href="/phim-moi/stuck-in-love" title="Stuck in Love.">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ke-phan-quoc-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/stuck-in-love-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Kẻ phản quốc
+             Stuck in Love.
             </span>
             <span class="list-top-movie-item-en">
-             Traitors
+             Stuck in Love.
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             1 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1756,43 +1778,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/xi-trum-ngoi-lang-ky-bi" title="Xì Trum: Ngôi Làng Kỳ Bí">
-           <span class="status">
-            HD Lồng Tiếng
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/xi-trum-ngoi-lang-ky-bi-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Xì Trum: Ngôi Làng Kỳ Bí
-            </span>
-            <span class="list-top-movie-item-en">
-             Smurfs: The Lost Village
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/dieu-bi-an" title="Điều Bí Ẩn">
+          <a class="list-top-movie-link" href="/phim-moi/chien-binh-cuoi-cung-coi-nguon-cua-quy" title="Chiến Binh Cuối Cùng: Cội Nguồn Của Quỷ">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dieu-bi-an-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chien-binh-cuoi-cung-coi-nguon-cua-quy-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Điều Bí Ẩn
+             Chiến Binh Cuối Cùng: Cội Nguồn Của Quỷ
             </span>
             <span class="list-top-movie-item-en">
-             Mysteria
+             The Last Warrior: Root of Evil
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
