add new website from server na

--- a/xem-phim-bo/ban-trai-di-thue/index.html
+++ b/xem-phim-bo/ban-trai-di-thue/index.html
@@ -1188,7 +1188,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             11
+             12
             </dd>
             <br/>
            </dl>
@@ -1658,18 +1658,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/dia-cau-luu-lac" title="Địa Cầu lưu lạc">
+          <a class="list-top-movie-link" href="/phim-moi/diep-vien-bat-bai" title="Điệp Viên Bất Bại">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dia-cau-luu-lac-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/diep-vien-bat-bai-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Địa Cầu lưu lạc
+             Điệp Viên Bất Bại
             </span>
             <span class="list-top-movie-item-en">
-             The Wandering Earth
+             The Spy Who Never Dies
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1680,62 +1680,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/phien-toa" title="Phiên tòa">
+          <a class="list-top-movie-link" href="/phim-moi/phobia-2" title="Phobia 2">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/phien-toa-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/phobia-2-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Phiên tòa
+             Phobia 2
             </span>
             <span class="list-top-movie-item-en">
-             The Trial
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/leave-no-trace" title="Leave No Trace">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/leave-no-trace-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Leave No Trace
-            </span>
-            <span class="list-top-movie-item-en">
-             Leave No Trace
-            </span>
-            <span class="list-top-movie-item-view">
-             4 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ban-be" title="Bạn Bè">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ban-be-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Bạn Bè
-            </span>
-            <span class="list-top-movie-item-en">
-             Friend
+             Phobia 2
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1746,21 +1702,65 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/cao-boi-samurai" title="Cao Bồi Samurai">
+          <a class="list-top-movie-link" href="/phim-moi/ky-luc-la-ve-ky-si-khong-dau" title="kỷ lục lạ về kỵ sĩ không đầu">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cao-boi-samurai-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ky-luc-la-ve-ky-si-khong-dau-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Cao Bồi Samurai
+             kỷ lục lạ về kỵ sĩ không đầu
             </span>
             <span class="list-top-movie-item-en">
-             Sukiyaki Western Django
+             The tale of the headless horseman
             </span>
             <span class="list-top-movie-item-view">
-             5 lượt xem
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/47-lang-nhan" title="47 Lãng Nhân">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/47-lang-nhan-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             47 Lãng Nhân
+            </span>
+            <span class="list-top-movie-item-en">
+             47 Ronin
+            </span>
+            <span class="list-top-movie-item-view">
+             3 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/nhung-tay-sung-diet-quy" title="Những Tay Súng Diệt Quỷ">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nhung-tay-sung-diet-quy-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Những Tay Súng Diệt Quỷ
+            </span>
+            <span class="list-top-movie-item-en">
+             Gallowwalkers
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
